[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
quinn = "0.9.3"
rustls = {version = "0.20.8", features = ["dangerous_configuration"]}
tokio = {version = "1.28.0", features = ["rt", "rt-multi-thread", "macros"]}
