[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
nanorand = "0.7.0"
quinn = "0.9.3"
rcgen = "0.10.0"
rustls = "0.20.8"
tokio = {version = "1.28.0", features = ["rt", "rt-multi-thread", "macros"]}
